--- a/com-core.pc.in
+++ b/com-core.pc.in
@@ -3,9 +3,9 @@ exec_prefix=@EXEC_PREFIX@
 libdir=@LIBDIR@
 includedir=@INCLUDEDIR@
 
-Name: connector
+Name: com-core
 Description: Light-weight IPC supporting library
 Version: @VERSION@
-Libs: -L${libdir} -lconnector
+Libs: -L${libdir} -lcom-core
 Cflags: -I${includedir}
 cppflags: -I${includedir}
