Change the LOG_TAG by guide of kernel team
Change-Id: I34b011f9ad06776ccdbe0b2a41de505bdc86bd5b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden -g -Wall -Werror -Winline"
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
 
 ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
-ADD_DEFINITIONS("-DLOG_TAG=\"${PROJECT_NAME}\"")
+ADD_DEFINITIONS("-DLOG_TAG=\"COM_CORE\"")
 ADD_DEFINITIONS("-DNDEBUG")
 
 ADD_LIBRARY(${PROJECT_NAME} SHARED
