--- a/project.config
+++ b/project.config
@@ -2,6 +2,11 @@
 	inheritFrom = domain-application-framework
 [project]
 	state = active
+	description = "Domain: App Framework;"\n\
+"Maintainers: Youngjoo Park;"\n\
+"Integrators: Sung-jae Park;"\n\
+"Licenses: Apache-2.0;"\n\
+
 [receive]
 	requireSignedOffBy = true
 	requireChangeId = true
